--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t jovinhz/docker-demo -f Dockerfile.dev
+  - docker build -t jovinhz/docker-demo -f Dockerfile.dev .
 
 script: 
   - docker run -e CI=true jovinhz/docker-demo npm run test
